
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int argevdisp1 ;
 int argevdisp2 ;
 int printf (char*,int,int) ;

long xtract_offset(char* buff, int len)
{
 long ret;





 ret = *((long*)&buff[0x214]);
 argevdisp1 = 0x080d7cd0;
 argevdisp2 = *((long*)&buff[0x264]);
 printf("[d] argevdisp1 = %08x, argevdisp2 = %08x\n",
  argevdisp1, argevdisp2);



 return(ret);
}
