; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_282.c_xtract_offset.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_282.c_xtract_offset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@argevdisp1 = common dso_local global i32 0, align 4
@argevdisp2 = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [42 x i8] c"[d] argevdisp1 = %08x, argevdisp2 = %08x\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @xtract_offset(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = getelementptr inbounds i8, i8* %6, i64 532
  %8 = bitcast i8* %7 to i64*
  %9 = load i64, i64* %8, align 8
  store i64 %9, i64* %5, align 8
  store i32 135101648, i32* @argevdisp1, align 4
  %10 = load i8*, i8** %3, align 8
  %11 = getelementptr inbounds i8, i8* %10, i64 612
  %12 = bitcast i8* %11 to i64*
  %13 = load i64, i64* %12, align 8
  %14 = trunc i64 %13 to i32
  store i32 %14, i32* @argevdisp2, align 4
  %15 = load i32, i32* @argevdisp1, align 4
  %16 = load i32, i32* @argevdisp2, align 4
  %17 = call i32 @printf(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0), i32 %15, i32 %16)
  %18 = load i64, i64* %5, align 8
  ret i64 %18
}

declare dso_local i32 @printf(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
